Added Hover States

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
         <li class="currentPage"> > Vaccines</li>
     </ul>
 
+    <div class="chatBox">
+        <img src="Images/ChatBox Icon.png">
+    </div>
+
     <!-- Latest Update Section -->
     <div class="latestUpdate">
         <h3>Latest Update on Vaccination Rollout</h3>
@@ -384,7 +388,7 @@
 
             <div id="lastItem">
                 <p>Copyright &copy; 2021 Toronto Covid Information Hub. All Rights Reserved.</p>
-                <span><a href="#logo"><img src="Images/Back to Top.png" alt=""></a></span>
+                <span><a href="#logo"><img src="Images/Back to Top.png" alt="" style="position: sticky;"></a></span>
             </div>
         </div>
     </section>
