--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <nav>
             <div class="header-wrapper">
                 <div class="logo">
-                    <a href="#"><img id="logo" src="Images/logo.png" alt="Logo"></a>
+                    <a href="#"><img id="logo" src="Images/Logo.png" alt="Logo"></a>
                 </div>
 
                 <!-- Global Utility Bar -->
@@ -410,6 +410,7 @@
             </div>
         </div>
     </section>
+    
 
 </body>
 </html>
