Polishing Home Page

--- a/home.html
+++ b/home.html
@@ -159,44 +159,11 @@
     <div class="divider">
         <section class="todayStat">
             <h2>Today’s COVID-19 Statistics at a Glance</h2>
-            <div class="test">
-                <div class="graph">
-                    <img class="covid_graph" src="Images/Blue Graph.png" alt="graph">
-                </div>
-                <div class="abc">
-                    <div id="data">
-                        <div id="table_holder">
-                            <table>
-                                <tr>
-                                    <th></th>
-                                    <th>Newly Reported</th>
-                                    <th>Cumulative</th>
-                                </tr>
-                                <tr class="colored-rows">
-                                    <td class="firstcol">Daily Cases</td>
-                                    <td class="secondcol"><strong>467</strong></td>
-                                    <td class="bold">104,300</td>
-                                </tr>
-                                <tr class="colored-rows">
-                                    <td class="firstcol">Recovered Cases</td>
-                                    <td class="secondcol"><strong>407</strong></td>
-                                    <td class="bold">96,943</td>
-                                </tr>
-                                <tr class="colored-rows">
-                                    <td class="firstcol">Variants of Concern</td>
-                                    <td class="secondcol"><strong>301</strong></td>
-                                    <td class="bold">4</td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="vaccine_progress">
-                        <h5 class="firstcol">Toronto, Vaccines</h5>
-                        <span><b>322,446</b> people have received complete shots of a vaccine so far.</span>
-                        <img id="progressbar" src="Images/Progress Bar.png" alt="Progress bar showing vaccine progress over the total population">
-                        <span><b>2.1%</b> have completed vaccination</span>
-                    </div>
-                </div>
+            <div class="statContainer">
+                <img class="covid_graph" src="Images/Blue Graph.png" alt="graph">
+            </div>
+            <div class="in_site_links link2">
+                <span><a href="#">View Detailed Statistics</a> &#8594;</span>
             </div>
         </section>
     </div>
@@ -209,63 +176,61 @@
                     <div class="card1"><p>Can I get Tested</p></div>
                     <div class="card2"><p>Can I get Vaccinated</p></div>
                     <div class="card3"><p>COVID-19 Symptoms</p></div>
-                    <div class="card4">Do's & Don'ts</div>
+                    <div class="card4"><p>Do's & Don'ts</p></div>
                 </div>
         </section>
     </div>
 
     <!-- Quick Links -->
-
-    <br>
-    <hr style="border: 1px lightgray solid;border-collapse: collapse">
-    
-    <section class="quickLinks">
-        <h2>Quick Links</h2>
-        <div class="quickLinksContainer">
-            <div class="QL">
-                <div class="Q">
-                    <h3>Economic Support</h3>
-                    <div class="subCard">
-                        <p>Recovery Initiatives</p>
+    <div class="divider">
+        <section class="quickLinks">
+            <h2>Quick Links</h2>
+            <div class="quickLinksContainer">
+                <div class="QL">
+                    <div class="Q">
+                        <h3>Economic Support</h3>
+                        <div class="subCard">
+                            <p>Recovery Initiatives</p>
+                        </div>
+                        <div class="subCard">
+                            <p>Income Support</p>
+                        </div>
+                        <div class="subCard">
+                            <p>Economic Assistance for Businesses</p>
+                        </div>
                     </div>
-                    <div class="subCard">
-                        <p>Income Support</p>
+                </div>
+                <div class="QL">
+                    <div class="Q">
+                        <h3>Work & School</h3>
+                        <div class="subCard">
+                            <p>Latest Updates for Schools</p>
+                        </div>
+                        <div class="subCard">
+                            <p>Measures in Place</p>
+                        </div>
+                        <div class="subCard">
+                            <p>Report Non-Compliance</p>
+                        </div>
                     </div>
-                    <div class="subCard">
-                        <p>Economic Assistance for Businesses</p>
+                </div>
+                <div class="QL">
+                    <div class="Q">
+                        <h3>Travel Rules</h3>
+                        <div class="subCard">
+                            <p>New Quarantine Rules</p>
+                        </div>
+                        <div class="subCard">
+                            <p>Know Before You Travel</p>
+                        </div>
+                        <div class="subCard">
+                            <p>Landing for the First Time</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="QL">
-                <div class="Q">
-                    <h3>Work & School</h3>
-                    <div class="subCard">
-                        <p>Latest Updates for Schools</p>
-                    </div>
-                    <div class="subCard">
-                        <p>Measures in Place</p>
-                    </div>
-                    <div class="subCard">
-                        <p>Report Non-Compliance</p>
-                    </div>
-                </div>
-            </div>
-            <div class="QL">
-                <div class="Q">
-                    <h3>Travel Rules</h3>
-                    <div class="subCard">
-                        <p>New Quarantine Rules</p>
-                    </div>
-                    <div class="subCard">
-                        <p>Know Before You Travel</p>
-                    </div>
-                    <div class="subCard">
-                        <p>Landing for the First Time</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <br>
 
@@ -384,3 +349,5 @@
             </div>
         </div>
     </section>
+</body>
+</html>
