--- a/home.html
+++ b/home.html
@@ -51,10 +51,11 @@
         <nav>
             <div class="header-wrapper">
                 <div class="logo">
-                    <a href="#"><img id="logo" src="Images/logo.png" alt="Logo"></a>
+                    <a href="#"><img id="logo" src="Images/Logo.png" alt="Logo"></a>
                 </div>
 
                 <!-- Global Utility Bar -->
+
                 <div class="top-tab">
                     <span class="global">
                         <a href="#"><small>A</small>A+</a></span>
@@ -66,6 +67,7 @@
             </div>
 
             <!-- Navigation Bar -->
+
             <div class="navbarContainer">
                 <ul class="navbar-main">
                     <li class="topNav"><a href class="active">Home</a></li>
@@ -127,7 +129,7 @@
                     <li class="dropdown">
                     <a href="javascript:void(0)" class="dropdownbtn">Vaccines</a>
                     <div class="dropdown-content">
-                        <a href="#">Vaccination Rollout</a>
+                        <a href="index.html">Vaccination Rollout</a>
                         <a href="#">How to Get Vaccinated</a>
                         <a href="#">Schedule a Vaccination</a>
                         <a href="#">Vaccination Centres</a>
@@ -141,6 +143,7 @@
     <br>
 
         <!-- Banner Image -->
+
     <section class="hero">
         <img class="banner" src="Images/Homepage Hero.png">
     
@@ -169,6 +172,7 @@
     </div>
 
       <!-- How Can We Help You Section -->
+
     <div class="background">
         <section class="helpYou">
             <h2>How Can We Help You?</h2>
@@ -182,6 +186,7 @@
     </div>
 
     <!-- Quick Links -->
+
     <div class="divider">
         <section class="quickLinks">
             <h2>Quick Links</h2>
@@ -258,6 +263,9 @@
                     </div>
                 </div>
 
+            </div>
+            <div class="in_site_links link3">
+                <span><a href="#">Read Full Article</a> &#8594;</span>
             </div>
     </section>
 
@@ -349,5 +357,6 @@
             </div>
         </div>
     </section>
+    <script src="JS/index.js" charset="utf-8"></script>
 </body>
 </html>
