--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <nav>
             <div class="header-wrapper">
                 <div class="logo">
-                    <a href="#"><img id="logo" src="Images/Logo.png" alt="Logo"></a>
+                    <a href="home.html"><img id="logo" src="Images/Logo.png" alt="Logo"></a>
                 </div>
 
                 <!-- Global Utility Bar -->
@@ -68,7 +68,7 @@
             <!-- Navigation Bar -->
             <div class="navbarContainer">
                 <ul class="navbar-main">
-                    <li class="topNav"><a href="">Home</a></li>
+                    <li class="topNav"><a href="home.html">Home</a></li>
                     <li class="dropdown topNav">
                         <a href="javascript:void(0)" class="dropdownbtn">News</a>
                         <div class="dropdown-content">
@@ -149,7 +149,7 @@
 
     <!-- Breadcrumb -->
     <ul class="breadcrumb">
-        <li><a href="#">Home</a></li> 
+        <li><a href="home.html">Home</a></li> 
         <li class="currentPage"> > Vaccines</li>
     </ul>
 
@@ -410,7 +410,6 @@
             </div>
         </div>
     </section>
-    
-
+    <script src="JS/index.js" charset="utf-8"></script>
 </body>
 </html>
