--- a/home.html
+++ b/home.html
@@ -253,13 +253,13 @@
                         <h3>Highlights</h3>
                     </div>
                     <div class="info">
-                        <p>City not ready for red zone</p>
+                        <p>• City not ready for red zone</p>
                         <hr class="white">
-                        <p>Would support changes to the framework</p>
+                        <p>• Would support changes to the framework</p>
                         <hr class="white">
-                        <p>Allow more “outdoor-focused activities”</p>
+                        <p>• Allow more “outdoor-focused activities”</p>
                         <hr class="white">
-                        <p>Not support the kind of reopening like in Red Zone</p>
+                        <p>• Not support the kind of reopening like in Red Zone</p>
                     </div>
                 </div>
 
