--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
                         <a href="#"><small>A</small>A+</a></span>
                     </span>
                     <span class="global"><a href="#">FAQs</a></span>
-                    <span class="global"><a href="#">Language &#x25BC;</a></span>
-                    <span class="global"><input type="search" style="width: 270px; height: 35px;" placeholder="Search"></span>
+                    <span class="global"><a href="#">Language &#9662;</a></span>
+                    <div class="searchBox">
+                        <span class="global"><input type="search" style="width: 270px; height: 35px;" placeholder="  Search"></span>
+                    </div>
                 </div>
             </div>
 
@@ -396,10 +398,10 @@
 
             <div id="socialMedia">
                 <h4>Follow Us:</h4>
-                <span><a href=""><img src="Images/Instagram.png" alt=""></a></span>
-                <span><a href=""><img src="Images/Twitter.png" alt=""></a></span>
-                <span><a href=""><img src="Images/Linkedin.png" alt=""></a></span>
-                <span><a href=""><img src="Images/Facebook.png" alt=""></a></span>
+                <span><a href=""><img onmouseover="this.src='Images/Instagram Hover.png'" onmouseout="this.src='Images/Instagram.png'" src="Images/Instagram.png" alt=""></a></span>
+                <span><a href=""><img onmouseover="this.src='Images/Twitter Hover.png'" onmouseout="this.src='Images/Twitter.png'" src="Images/Twitter.png" alt=""></a></span>
+                <span><a href=""><img onmouseover="this.src='Images/Linkedin Hover.png'" onmouseout="this.src='Images/Linkedin.png'" src="Images/Linkedin.png" alt=""></a></span>
+                <span><a href=""><img onmouseover="this.src='Images/Facebook Hover.png'" onmouseout="this.src='Images/Facebook.png'" src="Images/Facebook.png" alt=""></a></span>
             </div>
 
             <br><br>
