Linked FAQs Page

--- a/home.html
+++ b/home.html
@@ -60,9 +60,9 @@
                     <span class="global">
                         <a href="#"><small>A</small>A+</a></span>
                     </span>
-                    <span class="global"><a href="#">FAQs</a></span>
+                    <span class="global"><a href="https://kataylor1.github.io/COVID19Hub/faqs.html#">FAQs</a></span>
                     <span class="global"><a href="#">Language &#9662;</a></span>
-                    <span class="global"><input type="search" style="width: 270px; height: 35px;" placeholder="  Search"></span>
+                    <span class="global"><input type="search" style="width: 270px; height: 35px;" placeholder=" Search"></span>
                 </div>
             </div>
 
@@ -334,7 +334,7 @@
                 <span><a href="">Careers</a></span>
                 <span><a href="">Contact</a></span>
                 <span><a href="">Privacy Policy</a></span>
-                <span><a href="">FAQs</a></span>
+                <span><a href="https://kataylor1.github.io/COVID19Hub/faqs.html#">FAQs</a></span>
                 <span><a href="">Site Map</a></span>
                 <span><a href="">Volunteer</a></span>
             </div>
