--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
+    <!-- Icon Library -->
+    <script src="https://kit.fontawesome.com/9dc5a7d3c4.js" crossorigin="anonymous"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7LJ1MH2TYP"></script>
     <script>
@@ -59,10 +62,15 @@
                     <span class="global">
                         <a href="#"><small>A</small>A+</a></span>
                     </span>
-                    <span class="global"><a href="#">FAQs</a></span>
+                    <span class="global"><a href="https://kataylor1.github.io/COVID19Hub/faqs.html#">FAQs</a></span>
                     <span class="global"><a href="#">Language &#9662;</a></span>
                     <div class="searchBox">
                         <span class="global"><input type="search" style="width: 270px; height: 35px;" placeholder="  Search"></span>
+
+                        <!-- <form class="example" action="action_page.php">
+                            <input type="text" placeholder="Search.." name="search">
+                            <button type="submit"><i class="fa fa-search"></i></button>
+                        </form> -->
                     </div>
                 </div>
             </div>
@@ -389,7 +397,7 @@
                 <span><a href="">Careers</a></span>
                 <span><a href="">Contact</a></span>
                 <span><a href="">Privacy Policy</a></span>
-                <span><a href="">FAQs</a></span>
+                <span><a href="https://kataylor1.github.io/COVID19Hub/faqs.html#">FAQs</a></span>
                 <span><a href="">Site Map</a></span>
                 <span><a href="">Volunteer</a></span>
             </div>
@@ -412,6 +420,5 @@
             </div>
         </div>
     </section>
-    <script src="JS/index.js" charset="utf-8"></script>
 </body>
 </html>
